--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         </div>
 
         <script src="js/papaparse.min.js"></script>
+        <script src="https://unpkg.com/axios@0.12.0/dist/axios.min.js"></script>
         <script src="js/vue.js"></script>
         <script src="js/app.js"></script>
     </body>
