--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
                 <template v-if="ratings">
                     <div class="movie-list">
                         <template v-for="(bestMoviesOfTheYear, year) in bestPerYear">
-                            <div v-for="movie in bestMoviesOfTheYear.movies" class="movie-list__movie">
+                            <div v-for="(movie, index) in bestMoviesOfTheYear.movies" class="movie-list__movie">
                                 <div class="movie-list__movie-info">
-                                    <h3>{{ year }}</h3>
+                                    <h4 v-if="index == 0">{{ year }}</h4>
+                                    <h4 v-else>&nbsp;</h4>
                                     <img :src="posters[movie['const']]">
                                     <p><strong>{{ movie["Title"] }}</strong></p>
                                     <p>
