Add links to IMDb movie page

--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
                 <div class="year" v-for="year in Object.keys(bestPerYear).sort().reverse()">
                     <h2 class="year__title">{{ year }}</h2>
                     <div class="movie" v-for="(movie, index) in bestPerYear[year].movies">
-                        <h3 class="movie__title">{{ movie["Title"] }}</h3>
+                        <h3 class="movie__title">
+                            <a :href=movie["URL"] target="_blank">
+                                {{ movie["Title"] }}
+                            </a>
+                        </h3>
                         <p class="movie__ratings">
                             <span class="movie__user-rating"><i class="fa fa-user" aria-hidden="true"></i> {{ movie["You rated"] }}</span>
                             <span class="movie__all-users-rating"><i class="fa fa-users" aria-hidden="true"></i> {{ movie["IMDb Rating"] }}</span>
