Style the navigation

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <div id="app" class="main">
             <div v-if="sharedState.ratings">
                 <div class="navigation">
-                    <router-link to="/best-per-year">Best Per Year</router-link>
-                    <router-link to="/about">About</router-link>
+                    <router-link class="navigation__link" to="/best-per-year">Best Per Year</router-link>
+                    <router-link class="navigation__link" to="/about">About</router-link>
                 </div>
 
                 <div class="content">
