--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <script src="js/papaparse.min.js"></script>
         <script src="js/vue.js"></script>
         <script src="js/vue-router.js"></script>
+        <script src="js/components/best_per_year.js"></script>
         <script src="js/app.js"></script>
     </body>
 </html>
