--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <div id="app" class="main">
             <div v-if="sharedState.ratings">
                 <div class="navigation">
+                    <router-link class="navigation__link" to="/best-movies">Best Movies</router-link>
                     <router-link class="navigation__link" to="/best-per-year">Best Per Year</router-link>
-                    <router-link class="navigation__link" to="/about">About</router-link>
                 </div>
 
                 <div class="content">
@@ -38,6 +38,7 @@
         <script src="js/vue.js"></script>
         <script src="js/vue-router.js"></script>
         <script src="js/components/best_per_year.js"></script>
+        <script src="js/components/best_movies.js"></script>
         <script src="js/app.js"></script>
     </body>
 </html>
