--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <div class="navigation">
                     <router-link class="navigation__link" to="/best-movies">Best Movies</router-link>
                     <router-link class="navigation__link" to="/best-per-year">Best Per Year</router-link>
+                    <router-link class="navigation__link" to="/worst-movies">Worst Movies</router-link>
                 </div>
 
                 <div class="content">
@@ -39,6 +40,7 @@
         <script src="js/vue-router.js"></script>
         <script src="js/components/best_per_year.js"></script>
         <script src="js/components/best_movies.js"></script>
+        <script src="js/components/worst_movies.js"></script>
         <script src="js/app.js"></script>
     </body>
 </html>
