Show all movies from a given year

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <script src="js/components/best_per_year.js"></script>
         <script src="js/components/best_movies.js"></script>
         <script src="js/components/worst_movies.js"></script>
+        <script src="js/components/year_movies.js"></script>
         <script src="js/app.js"></script>
     </body>
 </html>
