Show underrated movies

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                     <router-link class="navigation__link" to="/best-per-year">Best Per Year</router-link>
                     <router-link class="navigation__link" to="/worst-movies">Worst Movies</router-link>
                     <router-link class="navigation__link" to="/overrated-movies">Overrated Movies</router-link>
+                    <router-link class="navigation__link" to="/underrated-movies">Underrated Movies</router-link>
                 </div>
 
                 <div class="content">
@@ -44,6 +45,7 @@
         <script src="js/components/worst_movies.js"></script>
         <script src="js/components/year_movies.js"></script>
         <script src="js/components/overrated_movies.js"></script>
+        <script src="js/components/underrated_movies.js"></script>
         <script src="js/app.js"></script>
     </body>
 </html>
