--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                     <router-link class="navigation__link" to="/worst-movies">Worst Movies</router-link>
                     <router-link class="navigation__link" to="/overrated-movies">Overrated Movies</router-link>
                     <router-link class="navigation__link" to="/underrated-movies">Underrated Movies</router-link>
+                    <router-link class="navigation__link" to="/directors">Directors</router-link>
                 </div>
 
                 <div class="content">
@@ -46,6 +47,7 @@
         <script src="js/components/year_movies.js"></script>
         <script src="js/components/overrated_movies.js"></script>
         <script src="js/components/underrated_movies.js"></script>
+        <script src="js/components/directors.js"></script>
         <script src="js/app.js"></script>
     </body>
 </html>
