Add open graph metadata

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html prefix="og: http://ogp.me/ns#">
     <head>
         <meta charset="utf-8">
         <title>My Movie Ratings</title>
@@ -9,6 +9,13 @@
         <link href="css/app.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Cantarell:400,700|Fjalla+One" rel="stylesheet">
         <script src="https://use.fontawesome.com/68f75989fc.js"></script>
+
+        <meta property="og:title" content="My Movie Ratings" />
+        <meta property="og:url" content="https://zecipriano.github.io/my-movie-ratings/" />
+        <meta property="og:type" content="website" />
+        <meta property="og:image" content="https://zecipriano.github.io/my-movie-ratings/img/og_image.png" />
+        <meta property="og:image:width" content="1200" />
+        <meta property="og:image:height" content="630" />
     </head>
     <body>
         <div class="site-header">
