Add credits and readme

--- a/index.html
+++ b/index.html
@@ -46,6 +46,14 @@
 
                 <p><small>You can download the file from the 'Your Ratings' screen on <a href="http://www.imdb.com/">IMDb</a>. On the bottom of the page there is a link to 'Export this list'.</small></p>
             </div>
+
+            <footer>
+                <p><small><a href="https://github.com/zecipriano/my-movie-ratings" target="_blank">See on GitHub</a></small></p>
+                <p><a href="http://zecipriano.com" target="_blank">
+                    <img class="author-logo" src="img/zecipriano.svg" title="Developed by Zé Cipriano" alt="Zé Cipriano">
+                </a></p>
+
+            </footer>
         </div>
 
         <script src="js/papaparse.min.js"></script>
